{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 46,
  "lineage": "825c2ea9-2fbf-7d5f-3904-6bc8d1a3ea5e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "advanced",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:security-group/sg-2ca18d55",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-2ca18d55",
            "ingress": [],
            "name": "default",
            "owner_id": "380705665641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default advanced"
            },
            "tags_all": {
              "Name": "Default advanced"
            },
            "vpc_id": "vpc-b6df58d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.advanced"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:security-group/sg-006e8a3f52fd8de9b",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-006e8a3f52fd8de9b",
            "ingress": [],
            "name": "default",
            "owner_id": "380705665641",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Default workshop system",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "Default workshop system",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "advanced",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:vpc/vpc-b6df58d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-960429f1",
            "default_route_table_id": "rtb-687a740f",
            "default_security_group_id": "sg-2ca18d55",
            "dhcp_options_id": "dopt-532d8934",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-b6df58d1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-687a740f",
            "owner_id": "380705665641",
            "tags": {
              "Name": "Default"
            },
            "tags_all": {
              "Name": "Default"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0aca249b161c17233",
            "domain": "vpc",
            "id": "eipalloc-06cfad9a8373996f8",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-00f20321749af37ef",
            "private_dns": "ip-10-1-60-215.ap-northeast-1.compute.internal",
            "private_ip": "10.1.60.215",
            "public_dns": "ec2-35-73-255-228.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.255.228",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:internet-gateway/igw-09c4b830b75cb071e",
            "id": "igw-09c4b830b75cb071e",
            "owner_id": "380705665641",
            "tags": {
              "Name": "workshop system"
            },
            "tags_all": {
              "Name": "workshop system"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06cfad9a8373996f8",
            "id": "nat-00aa9e6c8b544c340",
            "network_interface_id": "eni-00f20321749af37ef",
            "private_ip": "10.1.60.215",
            "public_ip": "35.73.255.228",
            "subnet_id": "subnet-0e8e916e2cb0a09d6"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:route-table/rtb-0c7beafd4a370a484",
            "id": "rtb-0c7beafd4a370a484",
            "owner_id": "380705665641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00aa9e6c8b544c340",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workshop system Private NAT",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system Private NAT",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.default",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:route-table/rtb-0ef59354855bf0766",
            "id": "rtb-0ef59354855bf0766",
            "owner_id": "380705665641",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09c4b830b75cb071e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workshop system Public",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system Public",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ec67434760339f6",
            "route_table_id": "rtb-0c7beafd4a370a484",
            "subnet_id": "subnet-0bd728f5ee8cfc7f1"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.default",
            "aws_route_table.private_nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddd8aeede365b6de",
            "route_table_id": "rtb-0c7beafd4a370a484",
            "subnet_id": "subnet-03af92ec7e066c9d5"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.default",
            "aws_route_table.private_nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070d2625b658861e2",
            "route_table_id": "rtb-0ef59354855bf0766",
            "subnet_id": "subnet-0e8e916e2cb0a09d6"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00505a0e8c9c1294e",
            "route_table_id": "rtb-0ef59354855bf0766",
            "subnet_id": "subnet-0deaf12875d711e0b"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:subnet/subnet-0bd728f5ee8cfc7f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.61.0/24",
            "id": "subnet-0bd728f5ee8cfc7f1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380705665641",
            "tags": {
              "Name": "workshop system Private ap-northeast-1a",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system Private ap-northeast-1a",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:subnet/subnet-03af92ec7e066c9d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.63.0/24",
            "id": "subnet-03af92ec7e066c9d5",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "380705665641",
            "tags": {
              "Name": "workshop system Private ap-northeast-1c",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system Private ap-northeast-1c",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:subnet/subnet-0e8e916e2cb0a09d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.1.60.0/24",
            "id": "subnet-0e8e916e2cb0a09d6",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380705665641",
            "tags": {
              "Name": "workshop system Public ap-northeast-1a",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system Public ap-northeast-1a",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:subnet/subnet-0deaf12875d711e0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.1.62.0/24",
            "id": "subnet-0deaf12875d711e0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "380705665641",
            "tags": {
              "Name": "workshop system Public ap-northeast-1c",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system Public ap-northeast-1c",
              "env": "system",
              "service": "workshop"
            },
            "vpc_id": "vpc-069bb38745294b2a4"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:380705665641:vpc/vpc-069bb38745294b2a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.60.0/22",
            "default_network_acl_id": "acl-0a4279ae90ef2ea77",
            "default_route_table_id": "rtb-0df0df5e8001f9131",
            "default_security_group_id": "sg-006e8a3f52fd8de9b",
            "dhcp_options_id": "dopt-532d8934",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-069bb38745294b2a4",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0df0df5e8001f9131",
            "owner_id": "380705665641",
            "tags": {
              "Name": "workshop system",
              "env": "system",
              "service": "workshop"
            },
            "tags_all": {
              "Name": "workshop system",
              "env": "system",
              "service": "workshop"
            }
          }
        }
      ]
    }
  ]
}